[metadata]
name = simple_diarizer
author = Chau
author_email = chau@.chau.com
description = Simplified diarization pipeline using some pretrained models - audio file to diarized segments in a few lines of code
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = simple_diarizer
package_dir =
    simple_diarizer = simple_diarizer
python_requires = >=3.7,<3.10